force-app/main/default/objects/GfAmsPurchaseOrderItem__c/GfAmsPurchaseOrderItem__c.object-meta.xml
<CustomObject>
    <label>발주아이템Old</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>