force-app/main/default/objects/GfAmsPurchaseOrderItem__c/fields/GoodsCode__c.field-meta.xml
<CustomField>
    <fullName>GoodsCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Goods Code</label>
    <referenceTo>GfAmsGoods__c</referenceTo>
    <relationshipName>Purchase_Order_Item</relationshipName>
    <type>Lookup</type>
</CustomField>