force-app/main/default/objects/GfAmsPurchaseOrderItem__c/fields/NetAmount__c.field-meta.xml
<CustomField>
    <fullName>NetAmount__c</fullName>
    <description>발주단가 * 발주 수량</description>
    <formula>IF(OR(ISBLANK(NetPrice__c) , ISBLANK(Quantity__c)),
				NetPrice__c,
				(NetPrice__c * Quantity__c)
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>