force-app/main/default/objects/GfAmsPurchaseOrderItem__c/fields/NetAmountOK__c.field-meta.xml
<CustomField>
    <fullName>NetAmountOK__c</fullName>
    <formula>IF(OR(ISBLANK(NetPrice__c) , ISBLANK(QuantityConfirm__c)),
    NetAmount__c,
    (NetPrice__c * QuantityConfirm__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Amount OK</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>