force-app/main/default/objects/GfAmsPurchaseOrderItem__c/fields/PurchaseOrder__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOrder__c</fullName>
    <description>발주 마스터</description>
    <label>Purchase Order</label>
    <referenceTo>GfAmsPurchaseOrder__c</referenceTo>
    <relationshipName>PurchaseOrderItem</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>