force-app/main/default/objects/GfAmsPurchaseOrderItem__c/fields/QuantityConfirm__c.field-meta.xml
<CustomField>
    <fullName>QuantityConfirm__c</fullName>
    <description>확정 수량</description>
    <label>Quantity Confirm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>