force-app/main/default/objects/GfAmsPurchaseOrderItem__c/fields/SKUOptions1__c.field-meta.xml
<CustomField>
    <fullName>SKUOptions1__c</fullName>
    <label>Color</label>
    <length>100</length>
    <type>Text</type>
</CustomField>