force-app/main/default/objects/GfAmsPurchaseOrderItem__c/fields/SKUOptions2__c.field-meta.xml
<CustomField>
    <fullName>SKUOptions2__c</fullName>
    <label>Size</label>
    <length>100</length>
    <type>Text</type>
</CustomField>