force-app/main/default/objects/GfAmsPurchaseOrderItem__c/fields/SKUOptions3__c.field-meta.xml
<CustomField>
    <fullName>SKUOptions3__c</fullName>
    <label>Material</label>
    <length>100</length>
    <type>Text</type>
</CustomField>