force-app/main/default/objects/GfAmsPurchaseOrderItem__c/fields/TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>TaxAmount__c</fullName>
    <description>세액단가 * 발주수량</description>
    <formula>IF(OR(ISBLANK(TaxPrice__c) , ISBLANK(Quantity__c)),
    TaxPrice__c,
    (TaxPrice__c * Quantity__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>