force-app/main/default/objects/GfAmsPurchaseOrderItem__c/fields/TaxAmountOK__c.field-meta.xml
<CustomField>
    <fullName>TaxAmountOK__c</fullName>
    <description>세액단가 * 확정수량</description>
    <formula>IF(OR(ISBLANK(TaxPrice__c) , ISBLANK(QuantityConfirm__c)),
    TaxAmount__c,
    (TaxPrice__c * QuantityConfirm__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Amount OK</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>