force-app/main/default/objects/GfAmsPurchaseOrderItem__c/fields/TaxPrice__c.field-meta.xml
<CustomField>
    <fullName>TaxPrice__c</fullName>
    <description>발주 단가 * 과세율</description>
    <formula>IF(OR(ISBLANK(NetPrice__c), ISBLANK(TaxRate__c)),
			 NetPrice__c,
			(NetPrice__c * TaxRate__c)
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>