force-app/main/default/objects/GfAmsPurchaseOrderItem__c/fields/TaxRate__c.field-meta.xml
<CustomField>
    <fullName>TaxRate__c</fullName>
    <defaultValue>10</defaultValue>
    <description>과세율</description>
    <label>Tax Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>